      (defaulting to 1 second processing). This makes the packing
      process faster while at the same time yielding to regular ZODB
      commits when busy.

    - Do not hold the commit lock during pack cleanup while deleting
      rows from the object reference tables; these tables are
      pack-specific and regular ZODB commits never touch these.

- Add an option to control schema creation / updating on startup.
  Setting the ``create-schema`` option to false will let you use
  RelStorage without a schema update.

- Fixed compatibility with PostgreSQL 9.0, which is capable of
  returning a new 'hex' type to the client. Some builds of psycopg2
  return garbage or raise an error when they see the new type. The fix
  was to encode more SQL query responses using base 64.

- With the new shared-blob-dir option set to false, it was possible
  for a thread to read a partially downloaded blob.  Fixed.  Thanks for
  the report from Maurits van Rees.

1.5.0b1 (2011-02-05)
--------------------

- Added a state_size column to object_state, making it possible
  to query the size of objects without loading the state.  The new
  column is intended for gathering statistics.  A schema migration
  is required.

- Added more logging during zodbconvert to show that something is
  happening and give an indication of how far along the process is.

- Fixed a missing import in the blob cache cleanup code.

- Added a --dry-run option to zodbpack.

- Replaced the graph traversal portion of the pack code with
  a more efficient implementation using Python sets (instead of SQL).
  The new code is much faster for packing databases with deeply
  nested objects.

1.5.0a1 (2010-10-21)
--------------------

- Added an option to store ZODB blobs in the database.  The option is
  called "shared-blob-dir" and it behaves very much like the ZEO
  option of the same name.  Blobs stored in the database are broken
  into chunks to reduce the impact on RAM.
